--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ecommerce Card</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <div class="container">
+        <div class="image-wrapper">
+            <div class="images">
+                <div class="img img-1">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
