--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
         <div class="image-wrapper">
             <div class="images">
                 <div class="img img-1">
-                    <img src="" alt="">
+                    <img src="images/ring-01.jpg" alt="image-1">
+                </div>
+                <div class="img img-1">
+                    <img src="images/ring-02.jpg" alt="image-1">
+                </div>
+                <div class="img img-1">
+                    <img src="images/ring-03.jpg" alt="image-1">
+                </div>
+                <div class="img img-1">
+                    <img src="images/ring-04.jpg" alt="image-1">
+                </div>
+                <div class="img img-1">
+                    <img src="images/ring-05.jpg" alt="image-1">
                 </div>
             </div>
         </div>
