Finish working on HTML markup

--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
         <div class="image-wrapper">
             <div class="images">
                 <div class="img img-1">
-                    <img src="images/ring-01.jpg" alt="image-1">
+                    <img src="images/ring-01.jpg" alt="image-1" />
                 </div>
                 <div class="img img-1">
-                    <img src="images/ring-02.jpg" alt="image-1">
+                    <img src="images/ring-02.jpg" alt="image-2" />
                 </div>
                 <div class="img img-1">
-                    <img src="images/ring-03.jpg" alt="image-1">
+                    <img src="images/ring-03.jpg" alt="image-3" />
                 </div>
                 <div class="img img-1">
-                    <img src="images/ring-04.jpg" alt="image-1">
+                    <img src="images/ring-04.jpg" alt="image-4" />
                 </div>
                 <div class="img img-1">
-                    <img src="images/ring-05.jpg" alt="image-1">
+                    <img src="images/ring-05.jpg" alt="image-5" />
                 </div>
+            </div>
+            <div class="active-image">
+                <img src="images/ring-01.jpg" alt="image-1" />
             </div>
         </div>
     </div>
