--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="image-wrapper">
             <div class="images">
-                <div class="img img-1">
+                <div class="img img-1 change">
                     <img src="images/ring-01.jpg" alt="image-1" />
                 </div>
                 <div class="img img-1">
